--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,26 @@
 }
 
 
+.whoosh{
+  position: fixed;
+  right: -100px;
+  bottom: 23px;
+  padding-top: 15px;
+  margin-bottom: 0;
+  z-index: 998;
+  transition: all 0.5s ease-in-out;
+}
+
+.whoosh.in-view{
+  position: fixed;
+  right: 23px;
+  bottom: 23px;
+  padding-top: 15px;
+  margin-bottom: 0;
+  z-index: 998;
+  transform: translate3d(-75px,0,0);
+}
+
 
 .banner {
   position: relative;
