--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@
   padding-top: 15px;
   margin-bottom: 0;
   z-index: 998;
+  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
@@ -40,6 +41,7 @@
   padding-top: 15px;
   margin-bottom: 0;
   z-index: 998;
+   -webkit-transform: translate3d(-75px,0,0);
   transform: translate3d(-75px,0,0);
 }
 
