--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,15 @@
   opacity: 0;
 }
 
+.dave{
+  transform: rotate(0deg);
+  transition: all 0.5s ease-in-out;
+}
+
+.dave:hover{
+  transform: rotate(30deg);
+  transition: all 1.0s ease-in-out;
+}
 
 .whoosh{
   position: fixed;
