--- a/css/style.css
+++ b/css/style.css
@@ -23,14 +23,42 @@
 }
 
 .dave{
-  transform: rotate(0deg);
   transition: all 0.5s ease-in-out;
 }
 
 .dave:hover{
-  transform: rotate(30deg);
-  transition: all 1.0s ease-in-out;
+  transform: rotate(180deg);
+  transition: all 5s ease-in-out;
 }
+
+.scaleUp{
+  transition: all 0.5s ease-in-out;
+}
+
+.scaleUp:hover{
+  transition: all 0.5s ease-in-out;
+  transform: scale(1.2,1.2);
+}
+
+.goRight{
+  transition: all 0.5s ease-in-out;
+}
+
+.goRight:hover{
+  transition: all 0.5s ease-in-out;
+  transform: translate3d(5%,0,0);
+}
+
+.goLeft{
+  transition: all 0.5s ease-in-out;
+}
+
+.goLeft:hover{
+  transition: all 0.5s ease-in-out;
+  transform: translate3d(-5%,0,0);
+}
+
+
 
 .whoosh{
   position: fixed;
