--- a/css/materialize.css
+++ b/css/materialize.css
@@ -4884,12 +4884,12 @@ small {
   z-index: 2000;
   background-color: transparent;
   border-radius: 2px;
-  color: #fff;
+  color: #ffffff;
   min-height: 36px;
   line-height: 120%;
   opacity: 0;
   position: absolute;
-  text-align: center;
+  text-align: left;
   max-width: calc(100% - 4px);
   overflow: hidden;
   left: 0;
