--- a/css/style.css
+++ b/css/style.css
@@ -23,12 +23,17 @@
 }
 
 .dave{
-  transition: all 0.5s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .dave:hover{
-  transform: rotate(180deg);
-  transition: all 5s ease-in-out;
+  transform: rotate(30deg);
+  transition: all 0.5s ease-in-out;
+}
+
+.dave:active{
+  transform: rotate(30deg);
+  transition: all 0.5s ease-in-out;
 }
 
 .scaleUp{
@@ -57,6 +62,8 @@
   transition: all 0.5s ease-in-out;
   transform: translate3d(-5%,0,0);
 }
+
+
 
 
 
@@ -132,6 +139,190 @@
   .pinned {
     position: fixed !important;
   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 992px) {
+  .overlay {
+    display: none;
+    background-color: #E1E1E1;
+    opacity: 0.50;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 900;
+  }
+
+  .fixed-action-btn ul {
+    display: none;
+  }
+
+  .fixed-action-btn:hover ul {
+    display: block;
+  }
+
+  .material-tooltip {
+    display: none !important;
+  }
+
+  .mobile-fab-tip {
+    position: fixed;
+    bottom: 85px;
+    padding: 7px 5px 4px 5px;
+    text-align: left;
+    background-color: #323232;
+    border-radius: 2px;
+    color: #FFF;
+    opacity: 0;
+  }
+
+  .mobile-fab-tip{
+    -webkit-animation: fadein 1s;
+    -moz-animation: fadein 1s;
+    -o-animation: fadein 1s;
+    animation: fadein 1s;
+
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-delay: 5.0s;
+    -moz-animation-delay: 5.0s;
+    -o-animation-delay: 5.0s;
+    animation-delay: 5.0s;
+    animation-duration: 10s;
+  }
+  @keyframes fadein {
+    0%,100% { opacity: 0; }
+    50% { opacity: 1; }
+  }
+  @-moz-keyframes fadein {
+    /* Firefox */
+    0%,100%  { opacity: 0; }
+    50% { opacity: 1; }
+  }
+  @-webkit-keyframes fadein {
+    /* Safari and Chrome */
+    0%,100%  { opacity: 0; }
+    50% { opacity: 1; }
+  }
+  @-o-keyframes fadein {
+    /* Opera */
+    0%,100%  { opacity: 0; }
+    50% { opacity: 1; }
+  }
+    @keyframes  fadeout {
+    /* Opera */
+    100% { opacity: 0; }
+    0% { opacity: 1; }
+  }
+  @-moz-keyframes  fadeout {
+    /* Opera */
+    100% { opacity: 0; }
+    0% { opacity: 1; }
+  }
+  @-webkit-keyframes  fadeout {
+    /* Opera */
+    100% { opacity: 0; }
+    0% { opacity: 1; }
+  }
+  @-o-keyframes fadeout {
+    /* Opera */
+    100% { opacity: 0; }
+    0% { opacity: 1; }
+  }
+}
+
+
+.mobile-fab-tip:hover{
+    -webkit-animation: fadein 1s;
+    -moz-animation: fadein 1s;
+    -o-animation: fadein 1s;
+    animation: fadein 1s;
+
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-delay: 0.5s;
+    -moz-animation-delay: 0.5s;
+    -o-animation-delay: 0.5s;
+    animation-delay: 1.0s;
+    animation-duration: 10s;
+  }
+  @keyframes fadein {
+    0%,100% { opacity: 0; }
+    50% { opacity: 1; }
+  }
+  @-moz-keyframes fadein {
+    /* Firefox */
+    0%,100%  { opacity: 0; }
+    50% { opacity: 1; }
+  }
+  @-webkit-keyframes fadein {
+    /* Safari and Chrome */
+    0%,100%  { opacity: 0; }
+    50% { opacity: 1; }
+  }
+  @-o-keyframes fadein {
+    /* Opera */
+    0%,100%  { opacity: 0; }
+    50% { opacity: 1; }
+  }
+    @keyframes  fadeout {
+    /* Opera */
+    100% { opacity: 0; }
+    0% { opacity: 1; }
+  }
+  @-moz-keyframes  fadeout {
+    /* Opera */
+    100% { opacity: 0; }
+    0% { opacity: 1; }
+  }
+  @-webkit-keyframes  fadeout {
+    /* Opera */
+    100% { opacity: 0; }
+    0% { opacity: 1; }
+  }
+  @-o-keyframes fadeout {
+    /* Opera */
+    100% { opacity: 0; }
+    0% { opacity: 1; }
+  }
+}
+
+/*** Desktop Only Styles ***/
+@media only screen and (min-width: 993px) {
+  .mobile-fab-tip {
+    display: none;
+  }
+
+  .overlay {
+    display: none;
+  }
+}
+
+
+
+
+
+
+
+
 
 
 
